# PSKA-Essential

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: ADAPTER_CONTRACTS.md  DEMO_RUNBOOK.md  FEASIBILITY_AUDIT.md  FRONTEND_REDESIGN.md  HANDOFF_SUMMARY.md  OPERATION_MANUAL.zh.md  PRODUCT_DESIGN.md  PSKA_DOCTRINE.md  RUNNING_AND_TESTING.md
skills/hermes/: SKILL.md  config.example.yaml
skills/openclaw/: SKILL.md
src/pska_essential/: __init__.py  __main__.py  agentic_loop.py  audit.py  capabilities.py  cli_errors.py  component_check.py  config.py  diagnostics.py  env_file.py  eval.py  governance.py  ingest_loop.py  ingest_loop_resume.py  kb_audit.py  kb_gateway.py  kb_scope.py  live_closed_loop.py  mcp_server.py  product_api.py  readiness.py  review_store.py  runtime_context.py  workflow.py  workspace_status.py  workspace_status_cli.py
src/pska_essential/adapters/company_graphrag_stub/: __init__.py  adapter.py
src/pska_essential/adapters/fake/: __init__.py  (+2 more)
src/pska_essential/contracts/: __init__.py  models.py
src/pska_essential/ports/: __init__.py  protocols.py
src/pska_essential/web/: app.js  index.html  styles.css
tests/: test_adapters.py  test_agentic_loop.py  test_component_check.py  test_config.py  test_diagnostics.py  test_env_file.py  test_eval.py  test_governance.py  test_graphiti_gate.py  test_ingest_loop.py  test_kb_gateway.py  test_live_closed_loop_cli.py  test_mcp_contract.py  test_product_api.py  test_readiness.py  test_skill_docs.py  test_workflow.py  test_workspace_status.py  test_workspace_status_cli.py
(+4 files in other folders)
